# MyNMON

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README_JA.md
.agents/: AGENTS.md  Instructions.md
.github/workflows/: ci.yml  release.yml
docs/: Architecture.md  DIAGRAM.md  FOOTPRINTS.md  SPEC.md  TEST_REPORT.md  Todo.md
docs/en/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIAGRAM.md  FOOTPRINTS.md  INSTRUCTIONS.md  RELEASE.md  SECURITY.md  SPEC.md  TESTING.md  TEST_REPORT.md  TODO.md
docs/ja/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIAGRAM.md  FOOTPRINTS.md  INSTRUCTIONS.md  RELEASE.md  SECURITY.md  SPEC.md  TESTING.md  TEST_REPORT.md  TODO.md
src/: main.rs  state.rs  ui.rs  utils.rs
