[package]
name = "MyNMON"
version = "0.1.4"
edition = "2021"
authors = ["AI Studio Developer"]
description = "Windows & Linux compatible ultra-lightweight CUI system monitor inspired by nmon."

[dependencies]
sysinfo = "0.30.12"
crossterm = "0.27.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

