[package]
name = "MyNMON"
version = "0.5.1"
edition = "2021"
authors = ["AI Studio Developer"]
description = "Windows & Linux compatible ultra-lightweight CUI system monitor inspired by nmon."

[dependencies]
sysinfo = "0.30.12"
crossterm = "0.29.0"
# 2026-07-03: 共有ライブラリの参照追加
common_lib = { path = "../common_lib" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[features]
default = ["cpu", "mem", "disk", "net", "proc", "diff"]
cpu = []
mem = []
disk = []
net = []
proc = []
diff = ["proc"]

